[gd_scene load_steps=4 format=2]

[ext_resource path="res://components/RoundTree.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/LevelX.gd" type="Script" id=2]
[ext_resource path="res://components/EditorBackground.tscn" type="PackedScene" id=5]

[node name="LevelX" type="Node2D"]
script = ExtResource( 2 )

[node name="EditorBackground" parent="." instance=ExtResource( 5 )]

[node name="Items" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Obstacles" type="YSort" parent="."]

[node name="Tree81" parent="Obstacles" instance=ExtResource( 1 )]
position = Vector2( 973.669, 2628.69 )

[node name="Tree82" parent="Obstacles" instance=ExtResource( 1 )]
position = Vector2( 393.367, 2659.2 )

[node name="Markers" type="Node2D" parent="."]

[node name="LevelBottom" type="Node2D" parent="Markers"]
position = Vector2( 671.904, 3535.49 )

[node name="SpawnPoint" type="Node2D" parent="Markers"]
position = Vector2( 658.435, 3032.6 )

[node name="LevelTop" type="Node2D" parent="Markers"]
position = Vector2( 677.235, 0 )

[node name="Exit1" type="Node2D" parent="."]
position = Vector2( 680.646, 2751.47 )
